k8s/helmrelease-nginx-ingress-controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress-controller
