k8s/helmrepository-bitnami.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress-controller
