k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task
  labels:
    app: django-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress-controller
