k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djando-app-deployment
  labels:
    app: django-app
  namespace: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      serviceAccountName: task-service-account
      containers:
        - name: djando-app
          image: mokhtar74/simple-ci-cd:redis-postgres-V2
          ports:
            - containerPort: 8000
