k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: task
  labels:
    app: django-app
spec:
  selector:
    app: django-app
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
